Bug #18798: mysqld cores on update in ha_ndbcluster call if cluster has failed before, added extra check that transaction is started